# ExoPlanetas

./: .env  ACCESO_RED.md  ALINEACION_SWAGGER.md  CORS_CONFIGURATION.md  Dockerfile  ENDPOINTS_VERSIONADO.md  ENDPOINTS_VERSION_SELECTION.md  ENDPOINT_MODEL_INFO_ACTUALIZADO.md  ENDPOINT_MODEL_INFO_MEJORADO.md  ENDPOINT_UPLOAD_MEJORADO.md  SWAGGER_VERSION_UPDATE.md  VERIFICACION_SWAGGER_COMPLETA.md  VERSIONADO_ERROR_FIX.md  config.py  main.py  modelo.py  pyproject.toml  render-simple.yaml  render.yaml  requirements.txt  run.py  setup.py  swagger.yaml  tess.csv  test_app.py  test_version.csv  users.db
API/: main.py
data/: TEST_predictions_latest.csv  TEST_predictions_v1.0.0.csv  TEST_predictions_v1.0.10.csv  TEST_predictions_v1.0.2.csv  TEST_predictions_v1.0.6.csv  TEST_predictions_v1.0.9.csv  cumulative_2025.10.04_10.55.33(1)_predictions_latest.csv  kepler_predictions.csv  test_complete_data_predictions_v1.0.0.csv  test_swagger_predictions_v1.0.0.csv  test_version_predictions_latest.csv
datasets/: kepler.csv
models/hgb_exoplanet_model/: hgb_exoplanet_model.pkl
models/hgb_exoplanet_model/matrix/: confusion_matrix.npy
models/hgb_exoplanet_model/metrics/: classification_report.json
models/hgb_exoplanet_model/v1.0.0/: model.pkl
models/hgb_exoplanet_model/v1.0.1/: model.pkl
models/hgb_exoplanet_model/v1.0.10/: model.pkl
models/hgb_exoplanet_model/v1.0.2/: model.pkl
models/hgb_exoplanet_model/v1.0.4/: model.pkl
models/hgb_exoplanet_model/v1.0.6/: model.pkl
models/hgb_exoplanet_model/v1.0.7/: model.pkl
src/models/: hgb_exoplanet.py
src/utils/: config.py
(+18 files in other folders)
