[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanetas-api"
version = "1.0.0"
description = "FastAPI application for exoplanet classification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["API*", "src*"]
